# Otto

./: LICENSE  README.md  comandos.txt  estrutura.txt
ros2_ws/src/otto_description/: CMakeLists.txt  LICENSE:Zone.Identifier  package.xml
ros2_ws/src/otto_description/config/: controllers.yaml
ros2_ws/src/otto_description/launch/: display.launch.py  gazebo.launch.py  gazebo.launch.py:Zone.Identifier  gazebo.launch_rev0.py  robot_description.launch.py  urdf.rviz
ros2_ws/src/otto_description/meshes/: FootLeft_1.stl  FootRight_1.stl  Head_1_1.stl  LeftLeg_1.stl  RightLeg_1.stl  Ultrasonic_Sensor_v1_1_1.stl  Ultrasonic_Sensor_v1_1_1__Corpo1.stl  Ultrasonic_Sensor_v1_1_1__Corpo10.stl  Ultrasonic_Sensor_v1_1_1__Corpo11.stl  Ultrasonic_Sensor_v1_1_1__Corpo12.stl  Ultrasonic_Sensor_v1_1_1__Corpo13.stl  Ultrasonic_Sensor_v1_1_1__Corpo14.stl  Ultrasonic_Sensor_v1_1_1__Corpo2.stl  Ultrasonic_Sensor_v1_1_1__Corpo3.stl  Ultrasonic_Sensor_v1_1_1__Corpo4.stl  Ultrasonic_Sensor_v1_1_1__Corpo5.stl  Ultrasonic_Sensor_v1_1_1__Corpo6.stl  Ultrasonic_Sensor_v1_1_1__Corpo7.stl  Ultrasonic_Sensor_v1_1_1__Corpo8.stl  Ultrasonic_Sensor_v1_1_1__Corpo9.stl  base_link_1.stl  body_centered.stl  foot_left_centered.stl  foot_right_centered.stl  head_centered.stl  leg_centered.stl  ultrasonic.stl
ros2_ws/src/otto_description/rviz/: otto.rviz
ros2_ws/src/otto_description/scripts/: otto_walk.py  walk.py
ros2_ws/src/otto_description/urdf/: fusion2urdf.txt  materials.xacro  otto copy.urdf  otto copy.xacro  otto.urdf  otto.xacro  otto.xacro:Zone.Identifier  otto_Descriptor_Original.xacro  (+2 more)
(+13 files in other folders)
